@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,8 +16,6 @@
 
 package org.springframework.test.context.junit4.spr9051;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -93,9 +91,8 @@ public class AnnotatedConfigClassesWithoutAtConfigurationTests {
 		assertThat(enigma).isNotNull();
 		assertThat(lifecycleBean).isNotNull();
 		assertThat(lifecycleBean.isInitialized()).isTrue();
-		Set<String> names = new HashSet<>();
-		names.add(enigma.toString());
-		names.add(lifecycleBean.getName());
-		assertThat(new HashSet<>(Arrays.asList("enigma #1", "enigma #2"))).isEqualTo(names);
+		Set<String> names = Set.of(enigma, lifecycleBean.getName());
+		assertThat(names).containsExactlyInAnyOrder("enigma #1", "enigma #2");
 	}
+
 }
