@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,35 +17,37 @@
 package org.springframework.web.reactive.resource;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Paths;
 import java.time.Duration;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Stream;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.core.io.buffer.DataBuffer;
-import org.springframework.core.io.buffer.DataBufferFactory;
 import org.springframework.core.io.buffer.DataBufferUtils;
 import org.springframework.core.io.buffer.DefaultDataBufferFactory;
-import org.springframework.core.testfixture.io.buffer.DataBufferTestUtils;
 import org.springframework.http.CacheControl;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.server.PathContainer;
+import org.springframework.util.ClassUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.server.MethodNotAllowedException;
@@ -54,7 +56,10 @@ import org.springframework.web.server.ServerWebExchange;
 import org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest;
 import org.springframework.web.testfixture.http.server.reactive.MockServerHttpResponse;
 import org.springframework.web.testfixture.server.MockServerWebExchange;
+import org.springframework.web.util.UriUtils;
+import org.springframework.web.util.pattern.PathPatternParser;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
@@ -67,23 +72,26 @@ import static org.mockito.Mockito.mock;
  * Unit tests for {@link ResourceWebHandler}.
  *
  * @author Rossen Stoyanchev
+ * @author Sam Brannen
+ * @author Brian Clozel
  */
-public class ResourceWebHandlerTests {
+class ResourceWebHandlerTests {
 
 	private static final Duration TIMEOUT = Duration.ofSeconds(1);
 
+	private final ClassPathResource testResource = new ClassPathResource("test/", getClass());
+	private final ClassPathResource testAlternatePathResource = new ClassPathResource("testalternatepath/", getClass());
+	private final ClassPathResource webjarsResource = new ClassPathResource("META-INF/resources/webjars/");
 
 	private ResourceWebHandler handler;
 
-	private DataBufferFactory bufferFactory = new DefaultDataBufferFactory();
-
 
 	@BeforeEach
-	public void setup() throws Exception {
-		List<Resource> locations = new ArrayList<>(2);
-		locations.add(new ClassPathResource("test/", getClass()));
-		locations.add(new ClassPathResource("testalternatepath/", getClass()));
-		locations.add(new ClassPathResource("META-INF/resources/webjars/"));
+	void setup() throws Exception {
+		List<Resource> locations = List.of(
+				this.testResource,
+				this.testAlternatePathResource,
+				this.webjarsResource);
 
 		this.handler = new ResourceWebHandler();
 		this.handler.setLocations(locations);
@@ -93,9 +101,10 @@ public class ResourceWebHandlerTests {
 
 
 	@Test
-	public void getResource() throws Exception {
+	void getResource() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		HttpHeaders headers = exchange.getResponse().getHeaders();
@@ -105,14 +114,15 @@ public class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceHttpHeader() throws Exception {
+	void getResourceHttpHeader() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.head(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat((Object) exchange.getResponse().getStatusCode()).isNull();
@@ -123,17 +133,17 @@ public class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 
 		StepVerifier.create(exchange.getResponse().getBody())
-				.expectErrorMatches(ex -> ex.getMessage().startsWith("No content was written"))
-				.verify();
+				.verifyComplete();
 	}
 
 	@Test
-	public void getResourceHttpOptions() {
+	void getResourceHttpOptions() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.options(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getStatusCode()).isNull();
@@ -141,9 +151,10 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceNoCache() throws Exception {
+	void getResourceNoCache() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.setCacheControl(CacheControl.noStore());
 		this.handler.handle(exchange).block(TIMEOUT);
 
@@ -152,29 +163,31 @@ public class ResourceWebHandlerTests {
 		assertThat(response.getHeaders().containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(response.getHeaders().getLastModified() / 1000);
 		assertThat(response.getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(response.getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(response.getHeaders().get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getVersionedResource() throws Exception {
+	void getVersionedResource() throws Exception {
 		VersionResourceResolver versionResolver = new VersionResourceResolver();
 		versionResolver.addFixedVersionStrategy("versionString", "/**");
-		this.handler.setResourceResolvers(Arrays.asList(versionResolver, new PathResourceResolver()));
+		this.handler.setResourceResolvers(List.of(versionResolver, new PathResourceResolver()));
 		this.handler.afterPropertiesSet();
 
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "versionString/foo.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertThat(exchange.getResponse().getHeaders().getETag()).isEqualTo("\"versionString\"");
+		assertThat(exchange.getResponse().getHeaders().getETag()).isEqualTo("W/\"versionString\"");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceWithHtmlMediaType() throws Exception {
+	void getResourceWithHtmlMediaType() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.html");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		HttpHeaders headers = exchange.getResponse().getHeaders();
@@ -183,13 +196,14 @@ public class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("test/foo.html") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceFromAlternatePath() throws Exception {
+	void getResourceFromAlternatePath() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "baz.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		HttpHeaders headers = exchange.getResponse().getHeaders();
@@ -199,14 +213,15 @@ public class ResourceWebHandlerTests {
 		assertThat(headers.containsKey("Last-Modified")).isTrue();
 		assertThat(resourceLastModifiedDate("testalternatepath/baz.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
 		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(headers.get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceFromSubDirectory() {
+	void getResourceFromSubDirectory() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/foo.js");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.parseMediaType("application/javascript"));
@@ -214,9 +229,10 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void getResourceFromSubDirectoryOfAlternatePath() {
+	void getResourceFromSubDirectoryOfAlternatePath() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/baz.js");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		HttpHeaders headers = exchange.getResponse().getHeaders();
@@ -224,9 +240,78 @@ public class ResourceWebHandlerTests {
 		assertResponseBody(exchange, "function foo() { console.log(\"hello world\"); }");
 	}
 
+	@Test
+	void getResourceWithFullPathAsPattern() {
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get("/foo.css"));
+		setPathWithinHandlerMapping(exchange, "");
+		setBestMachingPattern(exchange, "/foo.css");
+		this.handler.handle(exchange).block(TIMEOUT);
+		HttpHeaders headers = exchange.getResponse().getHeaders();
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertResponseBody(exchange, "h1 { color:red; }");
+	}
+
+	@Test
+	void getResourceWithRegisteredMediaType() throws Exception {
+		MediaType mediaType = new MediaType("foo", "bar");
+
+		ResourceWebHandler handler = new ResourceWebHandler();
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setMediaTypes(Collections.singletonMap("bar", mediaType));
+		handler.afterPropertiesSet();
+
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
+		setPathWithinHandlerMapping(exchange, "foo.bar");
+		setBestMachingPattern(exchange, "/**");
+		handler.handle(exchange).block(TIMEOUT);
+
+		HttpHeaders headers = exchange.getResponse().getHeaders();
+		assertThat(headers.getContentType()).isEqualTo(mediaType);
+		assertResponseBody(exchange, "foo bar foo bar foo bar");
+	}
+
+	@Test
+	void getResourceFromFileSystem() throws Exception {
+		String packagePath = ClassUtils.classPackageAsResourcePath(getClass());
+		String path = Paths.get("src/test/resources", packagePath).normalize() + "/";
+
+		ResourceWebHandler handler = new ResourceWebHandler();
+		handler.setLocations(List.of(new FileSystemResource(path)));
+		handler.afterPropertiesSet();
+
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
+		setPathWithinHandlerMapping(exchange, UriUtils.encodePath("test/foo with spaces.css", UTF_8));
+		setBestMachingPattern(exchange, "/**");
+		handler.handle(exchange).block(TIMEOUT);
+
+		HttpHeaders headers = exchange.getResponse().getHeaders();
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertResponseBody(exchange, "h1 { color:red; }");
+	}
+
+	@Test  // gh-27538, gh-27624
+	void filterNonExistingLocations() throws Exception {
+		List<Resource> inputLocations = List.of(
+				new ClassPathResource("test/", getClass()),
+				new ClassPathResource("testalternatepath/", getClass()),
+				new ClassPathResource("nosuchpath/", getClass()));
+
+		ResourceWebHandler handler = new ResourceWebHandler();
+		handler.setLocations(inputLocations);
+		handler.setOptimizeLocations(true);
+		handler.afterPropertiesSet();
+
+		List<Resource> actual = handler.getLocations();
+		assertThat(actual).hasSize(2);
+		assertThat(actual.get(0).getURL().toString()).endsWith("test/");
+		assertThat(actual.get(1).getURL().toString()).endsWith("testalternatepath/");
+	}
+
 	@Test // SPR-14577
-	public void getMediaTypeWithFavorPathExtensionOff() throws Exception {
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+	void getMediaTypeWithFavorPathExtensionOff() throws Exception {
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceWebHandler handler = new ResourceWebHandler();
 		handler.setLocations(paths);
 		handler.afterPropertiesSet();
@@ -234,25 +319,26 @@ public class ResourceWebHandlerTests {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get("")
 				.header("Accept", "application/json,text/plain,*/*"));
 		setPathWithinHandlerMapping(exchange, "foo.html");
+		setBestMachingPattern(exchange, "/**");
 		handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.TEXT_HTML);
 	}
 
 	@Test
-	public void testInvalidPath() throws Exception {
+	void invalidPath() throws Exception {
 
 		// Use mock ResourceResolver: i.e. we're only testing upfront validations...
 
-		Resource resource = mock(Resource.class);
+		Resource resource = mock();
 		given(resource.getFilename()).willThrow(new AssertionError("Resource should not be resolved"));
 		given(resource.getInputStream()).willThrow(new AssertionError("Resource should not be resolved"));
-		ResourceResolver resolver = mock(ResourceResolver.class);
+		ResourceResolver resolver = mock();
 		given(resolver.resolveResource(any(), any(), any(), any())).willReturn(Mono.just(resource));
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
-		handler.setResourceResolvers(Collections.singletonList(resolver));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setResourceResolvers(List.of(resolver));
 		handler.afterPropertiesSet();
 
 		testInvalidPath("../testsecret/secret.txt", handler);
@@ -260,7 +346,7 @@ public class ResourceWebHandlerTests {
 		testInvalidPath(":/../../testsecret/secret.txt", handler);
 
 		Resource location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
@@ -277,42 +363,37 @@ public class ResourceWebHandlerTests {
 	private void testInvalidPath(String requestPath, ResourceWebHandler handler) {
 		ServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, requestPath);
-
+		setBestMachingPattern(exchange, "/**");
 		StepVerifier.create(handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getStatus()).isEqualTo(HttpStatus.NOT_FOUND);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
-	@Test
-	public void testResolvePathWithTraversal() throws Exception {
-		for (HttpMethod method : HttpMethod.values()) {
-			testResolvePathWithTraversal(method);
-		}
-	}
-
-	private void testResolvePathWithTraversal(HttpMethod httpMethod) throws Exception {
+	@ParameterizedTest
+	@MethodSource("httpMethods")
+	void resolvePathWithTraversal(HttpMethod method) throws Exception {
 		Resource location = new ClassPathResource("test/", getClass());
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 
-		testResolvePathWithTraversal(httpMethod, "../testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "test/../../testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, ":/../../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "test/../../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, ":/../../testsecret/secret.txt", location);
 
 		location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
-		testResolvePathWithTraversal(httpMethod, "file:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/file:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "url:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/url:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "////../.." + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/%2E%2E/testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "%2F%2F%2E%2E%2F%2Ftestsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "file:" + secretPath, location);
+		testResolvePathWithTraversal(method, "/file:" + secretPath, location);
+		testResolvePathWithTraversal(method, "url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "/url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "////../.." + secretPath, location);
+		testResolvePathWithTraversal(method, "/%2E%2E/testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "%2F%2F%2E%2E%2F%2Ftestsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "url:" + secretPath, location);
 
 		// The following tests fail with a MalformedURLException on Windows
 		// testResolvePathWithTraversal(location, "/" + secretPath);
@@ -324,10 +405,11 @@ public class ResourceWebHandlerTests {
 
 		ServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.method(httpMethod, ""));
 		setPathWithinHandlerMapping(exchange, requestPath);
+		setBestMachingPattern(exchange, "/**");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getStatus()).isEqualTo(HttpStatus.NOT_FOUND);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				})
 				.verify(TIMEOUT);
 		if (!location.createRelative(requestPath).exists() && !requestPath.contains(":")) {
@@ -336,7 +418,7 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void processPath() {
+	void processPath() {
 		assertThat(this.handler.processPath("/foo/bar")).isSameAs("/foo/bar");
 		assertThat(this.handler.processPath("foo/bar")).isSameAs("foo/bar");
 
@@ -365,18 +447,15 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void initAllowedLocations() {
+	void initAllowedLocations() {
 		PathResourceResolver resolver = (PathResourceResolver) this.handler.getResourceResolvers().get(0);
 		Resource[] locations = resolver.getAllowedLocations();
 
-		assertThat(locations.length).isEqualTo(3);
-		assertThat(((ClassPathResource) locations[0]).getPath()).isEqualTo("test/");
-		assertThat(((ClassPathResource) locations[1]).getPath()).isEqualTo("testalternatepath/");
-		assertThat(((ClassPathResource) locations[2]).getPath()).isEqualTo("META-INF/resources/webjars/");
+		assertThat(locations).containsExactly(this.testResource, this.testAlternatePathResource, this.webjarsResource);
 	}
 
 	@Test
-	public void initAllowedLocationsWithExplicitConfiguration() throws Exception {
+	void initAllowedLocationsWithExplicitConfiguration() throws Exception {
 		ClassPathResource location1 = new ClassPathResource("test/", getClass());
 		ClassPathResource location2 = new ClassPathResource("testalternatepath/", getClass());
 
@@ -384,31 +463,31 @@ public class ResourceWebHandlerTests {
 		pathResolver.setAllowedLocations(location1);
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setResourceResolvers(Collections.singletonList(pathResolver));
-		handler.setLocations(Arrays.asList(location1, location2));
+		handler.setResourceResolvers(List.of(pathResolver));
+		handler.setLocations(List.of(location1, location2));
 		handler.afterPropertiesSet();
 
-		Resource[] locations = pathResolver.getAllowedLocations();
-		assertThat(locations.length).isEqualTo(1);
-		assertThat(((ClassPathResource) locations[0]).getPath()).isEqualTo("test/");
+		assertThat(pathResolver.getAllowedLocations()).containsExactly(location1);
 	}
 
 	@Test
-	public void notModified() throws Exception {
+	void notModified() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(
 				MockServerHttpRequest.get("").ifModifiedSince(resourceLastModified("test/foo.css")));
 
 		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.NOT_MODIFIED);
 	}
 
 	@Test
-	public void modified() throws Exception {
+	void modified() throws Exception {
 		long timestamp = resourceLastModified("test/foo.css") / 1000 * 1000 - 1;
 		MockServerHttpRequest request = MockServerHttpRequest.get("").ifModifiedSince(timestamp).build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat((Object) exchange.getResponse().getStatusCode()).isNull();
@@ -416,70 +495,70 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void directory() {
+	void directory() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/");
+		setBestMachingPattern(exchange, "/**");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getStatus()).isEqualTo(HttpStatus.NOT_FOUND);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
 	@Test
-	public void directoryInJarFile() {
+	void directoryInJarFile() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "underscorejs/");
+		setBestMachingPattern(exchange, "/**");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getStatus()).isEqualTo(HttpStatus.NOT_FOUND);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
 	@Test
-	public void missingResourcePath() {
+	void missingResourcePath() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "");
+		setBestMachingPattern(exchange, "/**");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getStatus()).isEqualTo(HttpStatus.NOT_FOUND);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
 	@Test
-	public void noPathWithinHandlerMappingAttribute() {
+	void noPathWithinHandlerMappingAttribute() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		assertThatIllegalArgumentException().isThrownBy(() ->
 				this.handler.handle(exchange).block(TIMEOUT));
 	}
 
 	@Test
-	public void unsupportedHttpMethod() {
+	void unsupportedHttpMethod() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.post(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
 		assertThatExceptionOfType(MethodNotAllowedException.class).isThrownBy(() ->
 				this.handler.handle(exchange).block(TIMEOUT));
 	}
 
-	@Test
-	public void resourceNotFound() throws Exception {
-		for (HttpMethod method : HttpMethod.values()) {
-			resourceNotFound(method);
-		}
-	}
-
-	private void resourceNotFound(HttpMethod httpMethod) {
-		MockServerHttpRequest request = MockServerHttpRequest.method(httpMethod, "").build();
+	@ParameterizedTest
+	@MethodSource("httpMethods")
+	void resourceNotFound(HttpMethod method) throws Exception {
+		MockServerHttpRequest request = MockServerHttpRequest.method(method, "").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "not-there.css");
+		setBestMachingPattern(exchange, "/**");
 		Mono<Void> mono = this.handler.handle(exchange);
 
 		StepVerifier.create(mono)
 				.expectErrorSatisfies(err -> {
 					assertThat(err).isInstanceOf(ResponseStatusException.class);
-					assertThat(((ResponseStatusException) err).getStatus()).isEqualTo(HttpStatus.NOT_FOUND);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 
 		// SPR-17475
@@ -489,10 +568,11 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentByteRange() {
+	void partialContentByteRange() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("Range", "bytes=0-1").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
@@ -500,15 +580,16 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(2);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 0-1/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "So");
 	}
 
 	@Test
-	public void partialContentByteRangeNoEnd() {
+	void partialContentByteRangeNoEnd() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=9-").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
@@ -516,15 +597,16 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentByteRangeLargeEnd() {
+	void partialContentByteRangeLargeEnd() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=9-10000").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
@@ -532,15 +614,16 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentSuffixRange() {
+	void partialContentSuffixRange() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=-1").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
@@ -548,15 +631,16 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentSuffixRangeLargeSuffix() {
+	void partialContentSuffixRangeLargeSuffix() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=-11").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
@@ -564,15 +648,16 @@ public class ResourceWebHandlerTests {
 		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(10);
 		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 0-9/10");
 		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
-		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges").size()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "Some text.");
 	}
 
 	@Test
-	public void partialContentInvalidRangeHeader() {
+	void partialContentInvalidRangeHeader() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=foo bar").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
+		setBestMachingPattern(exchange, "/**");
 
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectNextCount(0)
@@ -584,10 +669,11 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void partialContentMultipleByteRanges() {
+	void partialContentMultipleByteRanges() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("Range", "bytes=0-1, 4-5, 8-9").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
@@ -597,7 +683,7 @@ public class ResourceWebHandlerTests {
 		String boundary = "--" + exchange.getResponse().getHeaders().getContentType().toString().substring(30);
 
 		Mono<DataBuffer> reduced = Flux.from(exchange.getResponse().getBody())
-				.reduce(this.bufferFactory.allocateBuffer(), (previous, current) -> {
+				.reduce(DefaultDataBufferFactory.sharedInstance.allocateBuffer(256), (previous, current) -> {
 					previous.write(current);
 					DataBufferUtils.release(current);
 					return previous;
@@ -605,7 +691,7 @@ public class ResourceWebHandlerTests {
 
 		StepVerifier.create(reduced)
 				.consumeNextWith(buf -> {
-					String content = DataBufferTestUtils.dumpString(buf, StandardCharsets.UTF_8);
+					String content = buf.toString(UTF_8);
 					String[] ranges = StringUtils.tokenizeToStringArray(content, "\r\n", false, true);
 
 					assertThat(ranges[0]).isEqualTo(boundary);
@@ -628,19 +714,40 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test  // SPR-14005
-	public void doOverwriteExistingCacheControlHeaders() {
+	void doOverwriteExistingCacheControlHeaders() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		exchange.getResponse().getHeaders().setCacheControl(CacheControl.noStore().getHeaderValue());
 		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		assertThat(exchange.getResponse().getHeaders().getCacheControl()).isEqualTo("max-age=3600");
+	}
+
+	@Test
+	void ignoreLastModified() {
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
+		setPathWithinHandlerMapping(exchange, "foo.css");
+		setBestMachingPattern(exchange, "/**");
+		this.handler.setUseLastModified(false);
+		this.handler.handle(exchange).block(TIMEOUT);
+
+		HttpHeaders headers = exchange.getResponse().getHeaders();
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertThat(headers.containsKey("Last-Modified")).isFalse();
+		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 
 	private void setPathWithinHandlerMapping(ServerWebExchange exchange, String path) {
 		exchange.getAttributes().put(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE,
 				PathContainer.parsePath(path));
+	}
+
+	private void setBestMachingPattern(ServerWebExchange exchange, String pattern) {
+		exchange.getAttributes().put(HandlerMapping.BEST_MATCHING_PATTERN_ATTRIBUTE,
+				new PathPatternParser().parse(pattern));
 	}
 
 	private long resourceLastModified(String resourceName) throws IOException {
@@ -653,9 +760,14 @@ public class ResourceWebHandlerTests {
 
 	private void assertResponseBody(MockServerWebExchange exchange, String responseBody) {
 		StepVerifier.create(exchange.getResponse().getBody())
-				.consumeNextWith(buf -> assertThat(DataBufferTestUtils.dumpString(buf, StandardCharsets.UTF_8)).isEqualTo(responseBody))
+				.consumeNextWith(buf -> assertThat(buf.toString(UTF_8)).isEqualTo(responseBody))
 				.expectComplete()
 				.verify();
+	}
+
+
+	static Stream<HttpMethod> httpMethods() {
+		return Arrays.stream(HttpMethod.values());
 	}
 
 }
