@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,22 +25,22 @@ import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.concurrent.CompletionException;
 import java.util.concurrent.CompletionStage;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
-import javax.servlet.AsyncContext;
-import javax.servlet.ServletException;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpServletResponseWrapper;
-
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponseWrapper;
 import org.reactivestreams.Publisher;
 import org.reactivestreams.Subscriber;
 import org.reactivestreams.Subscription;
 
 import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.core.ReactiveAdapter;
+import org.springframework.core.ReactiveAdapterRegistry;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.ResourceRegion;
@@ -49,6 +49,7 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpRange;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.InvalidMediaTypeException;
 import org.springframework.http.MediaType;
 import org.springframework.http.converter.GenericHttpMessageConverter;
@@ -56,10 +57,10 @@ import org.springframework.http.converter.HttpMessageConverter;
 import org.springframework.http.server.ServletServerHttpResponse;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
-import org.springframework.util.ClassUtils;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.HttpMediaTypeNotAcceptableException;
+import org.springframework.web.context.request.async.DeferredResult;
 import org.springframework.web.servlet.ModelAndView;
 
 /**
@@ -71,9 +72,6 @@ import org.springframework.web.servlet.ModelAndView;
  */
 final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T> {
 
-	private static final boolean reactiveStreamsPresent = ClassUtils.isPresent(
-			"org.reactivestreams.Publisher", DefaultEntityResponseBuilder.class.getClassLoader());
-
 	private static final Type RESOURCE_REGION_LIST_TYPE =
 				new ParameterizedTypeReference<List<ResourceRegion>>() { }.getType();
 
@@ -82,7 +80,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 	private final Type entityType;
 
-	private int status = HttpStatus.OK.value();
+	private HttpStatusCode status = HttpStatus.OK;
 
 	private final HttpHeaders headers = new HttpHeaders();
 
@@ -95,16 +93,15 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	}
 
 	@Override
-	public EntityResponse.Builder<T> status(HttpStatus status) {
-		Assert.notNull(status, "HttpStatus must not be null");
-		this.status = status.value();
+	public EntityResponse.Builder<T> status(HttpStatusCode status) {
+		Assert.notNull(status, "HttpStatusCode must not be null");
+		this.status = status;
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> status(int status) {
-		this.status = status;
-		return this;
+		return status(HttpStatusCode.valueOf(status));
 	}
 
 	@Override
@@ -204,18 +201,18 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	@SuppressWarnings({"rawtypes", "unchecked"})
 	@Override
 	public EntityResponse<T> build() {
-		if (this.entity instanceof CompletionStage) {
-			CompletionStage completionStage = (CompletionStage) this.entity;
+		if (this.entity instanceof CompletionStage completionStage) {
 			return new CompletionStageEntityResponse(this.status, this.headers, this.cookies,
 					completionStage, this.entityType);
 		}
-		else if (reactiveStreamsPresent && PublisherEntityResponse.isPublisher(this.entity)) {
-			Publisher publisher = (Publisher) this.entity;
-			return new PublisherEntityResponse(this.status, this.headers, this.cookies, publisher, this.entityType);
+		else if (DefaultAsyncServerResponse.reactiveStreamsPresent) {
+			ReactiveAdapter adapter = ReactiveAdapterRegistry.getSharedInstance().getAdapter(this.entity.getClass());
+			if (adapter != null) {
+				Publisher<T> publisher = adapter.toPublisher(this.entity);
+				return new PublisherEntityResponse(this.status, this.headers, this.cookies, publisher, this.entityType);
+			}
 		}
-		else {
-			return new DefaultEntityResponse<>(this.status, this.headers, this.cookies, this.entity, this.entityType);
-		}
+		return new DefaultEntityResponse<>(this.status, this.headers, this.cookies, this.entity, this.entityType);
 	}
 
 
@@ -237,24 +234,18 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	/**
 	 * Default {@link EntityResponse} implementation for synchronous bodies.
 	 */
-	private static class DefaultEntityResponse<T> extends DefaultServerResponseBuilder.AbstractServerResponse
-			implements EntityResponse<T> {
+	private static class DefaultEntityResponse<T> extends AbstractServerResponse implements EntityResponse<T> {
 
 		private final T entity;
 
 		private final Type entityType;
 
-		public DefaultEntityResponse(int statusCode, HttpHeaders headers,
+		public DefaultEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, T entity, Type entityType) {
 
 			super(statusCode, headers, cookies);
 			this.entity = entity;
 			this.entityType = entityType;
-		}
-
-		private static <T> boolean isResource(T entity) {
-			return !(entity instanceof InputStreamResource) &&
-					(entity instanceof Resource);
 		}
 
 		@Override
@@ -271,7 +262,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			return null;
 		}
 
-		@SuppressWarnings({ "unchecked", "resource" })
+		@SuppressWarnings({ "unchecked", "resource", "rawtypes" })
 		protected void writeEntityWithMessageConverters(Object entity, HttpServletRequest request,
 				HttpServletResponse response, ServerResponse.Context context)
 				throws ServletException, IOException {
@@ -301,16 +292,14 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			}
 
 			for (HttpMessageConverter<?> messageConverter : context.messageConverters()) {
-				if (messageConverter instanceof GenericHttpMessageConverter<?>) {
-					GenericHttpMessageConverter<Object> genericMessageConverter =
-							(GenericHttpMessageConverter<Object>) messageConverter;
+				if (messageConverter instanceof GenericHttpMessageConverter genericMessageConverter) {
 					if (genericMessageConverter.canWrite(entityType, entityClass, contentType)) {
 						genericMessageConverter.write(entity, entityType, contentType, serverResponse);
 						return;
 					}
 				}
 				if (messageConverter.canWrite(entityClass, contentType)) {
-					((HttpMessageConverter<Object>)messageConverter).write(entity, contentType, serverResponse);
+					((HttpMessageConverter<Object>) messageConverter).write(entity, contentType, serverResponse);
 					return;
 				}
 			}
@@ -330,7 +319,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 		}
 
 		protected void tryWriteEntityWithMessageConverters(Object entity, HttpServletRequest request,
-				HttpServletResponse response, ServerResponse.Context context) {
+				HttpServletResponse response, ServerResponse.Context context) throws ServletException, IOException {
 			try {
 				writeEntityWithMessageConverters(entity, request, response, context);
 			}
@@ -345,8 +334,8 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 			return messageConverters.stream()
 					.filter(messageConverter -> messageConverter.canWrite(entityClass, null))
-					.flatMap(messageConverter -> messageConverter.getSupportedMediaTypes().stream())
-					.collect(Collectors.toList());
+					.flatMap(messageConverter -> messageConverter.getSupportedMediaTypes(entityClass).stream())
+					.toList();
 		}
 
 	}
@@ -357,82 +346,106 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	 */
 	private static class CompletionStageEntityResponse<T> extends DefaultEntityResponse<CompletionStage<T>> {
 
-		public CompletionStageEntityResponse(int statusCode, HttpHeaders headers,
+		public CompletionStageEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, CompletionStage<T> entity, Type entityType) {
 
 			super(statusCode, headers, cookies, entity, entityType);
 		}
 
 		@Override
-		protected ModelAndView writeToInternal(HttpServletRequest servletRequest,
-				HttpServletResponse servletResponse, Context context) {
+		protected ModelAndView writeToInternal(HttpServletRequest servletRequest, HttpServletResponse servletResponse,
+				Context context) throws ServletException, IOException {
 
-			AsyncContext asyncContext = servletRequest.startAsync(servletRequest, servletResponse);
-			entity().whenComplete((entity, throwable) -> {
-				try {
-					if (entity != null) {
-
-						tryWriteEntityWithMessageConverters(entity,
-								(HttpServletRequest) asyncContext.getRequest(),
-								(HttpServletResponse) asyncContext.getResponse(),
-								context);
-					}
-					else if (throwable != null) {
-						handleError(throwable, servletRequest, servletResponse, context);
-					}
-				}
-				finally {
-					asyncContext.complete();
-				}
-			});
+			DeferredResult<ServerResponse> deferredResult = createDeferredResult(servletRequest, servletResponse, context);
+			DefaultAsyncServerResponse.writeAsync(servletRequest, servletResponse, deferredResult);
 			return null;
 		}
+
+		private DeferredResult<ServerResponse> createDeferredResult(HttpServletRequest request, HttpServletResponse response,
+				Context context) {
+
+			DeferredResult<ServerResponse> result = new DeferredResult<>();
+			entity().whenComplete((value, ex) -> {
+				if (ex != null) {
+					if (ex instanceof CompletionException && ex.getCause() != null) {
+						ex = ex.getCause();
+					}
+					ServerResponse errorResponse = errorResponse(ex, request);
+					if (errorResponse != null) {
+						result.setResult(errorResponse);
+					}
+					else {
+						result.setErrorResult(ex);
+					}
+				}
+				else {
+					try {
+						tryWriteEntityWithMessageConverters(value, request, response, context);
+						result.setResult(null);
+					}
+					catch (ServletException | IOException writeException) {
+						result.setErrorResult(writeException);
+					}
+				}
+			});
+			return result;
+		}
+
 	}
 
 
+	/**
+	 * {@link EntityResponse} implementation for asynchronous {@link Publisher} bodies.
+	 */
 	private static class PublisherEntityResponse<T> extends DefaultEntityResponse<Publisher<T>> {
 
-		public PublisherEntityResponse(int statusCode, HttpHeaders headers,
+		public PublisherEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, Publisher<T> entity, Type entityType) {
 
 			super(statusCode, headers, cookies, entity, entityType);
 		}
 
 		@Override
-		protected ModelAndView writeToInternal(HttpServletRequest servletRequest,
-				HttpServletResponse servletResponse, Context context) {
+		protected ModelAndView writeToInternal(HttpServletRequest servletRequest, HttpServletResponse servletResponse,
+				Context context) throws ServletException, IOException {
 
-			AsyncContext asyncContext = servletRequest.startAsync(servletRequest,
-					new NoContentLengthResponseWrapper(servletResponse));
-			entity().subscribe(new ProducingSubscriber(asyncContext, context));
+			DeferredResult<?> deferredResult = new DeferredResult<>();
+			DefaultAsyncServerResponse.writeAsync(servletRequest, servletResponse, deferredResult);
+
+			entity().subscribe(new DeferredResultSubscriber(servletRequest, servletResponse, context, deferredResult));
 			return null;
 		}
 
-		public static boolean isPublisher(Object entity) {
-			return (entity instanceof Publisher);
-		}
 
+		private class DeferredResultSubscriber implements Subscriber<T> {
 
-		@SuppressWarnings("SubscriberImplementation")
-		private class ProducingSubscriber implements Subscriber<T> {
+			private final HttpServletRequest servletRequest;
 
-			private final AsyncContext asyncContext;
+			private final HttpServletResponse servletResponse;
 
 			private final Context context;
+
+			private final DeferredResult<?> deferredResult;
 
 			@Nullable
 			private Subscription subscription;
 
-			public ProducingSubscriber(AsyncContext asyncContext, Context context) {
-				this.asyncContext = asyncContext;
+
+			public DeferredResultSubscriber(HttpServletRequest servletRequest,
+					HttpServletResponse servletResponse, Context context,
+					DeferredResult<?> deferredResult) {
+
+				this.servletRequest = servletRequest;
+				this.servletResponse = new NoContentLengthResponseWrapper(servletResponse);
 				this.context = context;
+				this.deferredResult = deferredResult;
 			}
 
 			@Override
 			public void onSubscribe(Subscription s) {
 				if (this.subscription == null) {
 					this.subscription = s;
-					this.subscription.request(Long.MAX_VALUE);
+					this.subscription.request(1);
 				}
 				else {
 					s.cancel();
@@ -440,22 +453,39 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			}
 
 			@Override
-			public void onNext(T element) {
-				HttpServletRequest servletRequest = (HttpServletRequest) this.asyncContext.getRequest();
-				HttpServletResponse servletResponse = (HttpServletResponse) this.asyncContext.getResponse();
-				tryWriteEntityWithMessageConverters(element, servletRequest, servletResponse, this.context);
+			public void onNext(T t) {
+				Assert.state(this.subscription != null, "No subscription");
+				try {
+					tryWriteEntityWithMessageConverters(t, this.servletRequest, this.servletResponse, this.context);
+					this.servletResponse.getOutputStream().flush();
+					this.subscription.request(1);
+				}
+				catch (ServletException | IOException ex) {
+					this.subscription.cancel();
+					this.deferredResult.setErrorResult(ex);
+				}
 			}
 
 			@Override
 			public void onError(Throwable t) {
-				handleError(t, (HttpServletRequest) this.asyncContext.getRequest(),
-						(HttpServletResponse) this.asyncContext.getResponse(), this.context);
-				this.asyncContext.complete();
+				try {
+					handleError(t, this.servletRequest, this.servletResponse, this.context);
+				}
+				catch (ServletException | IOException handlingThrowable) {
+					this.deferredResult.setErrorResult(handlingThrowable);
+				}
 			}
 
 			@Override
 			public void onComplete() {
-				this.asyncContext.complete();
+				try {
+					this.servletResponse.getOutputStream().flush();
+					this.deferredResult.setResult(null);
+				}
+				catch (IOException ex) {
+					this.deferredResult.setErrorResult(ex);
+				}
+
 			}
 		}
 
