@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,24 +16,33 @@
 
 package org.springframework.web.servlet.function;
 
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
 import java.net.InetSocketAddress;
 import java.net.URI;
 import java.nio.charset.Charset;
 import java.security.Principal;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalLong;
 
-import javax.servlet.http.Cookie;
-
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.Part;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpRange;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.converter.HttpMessageConverter;
 import org.springframework.http.converter.StringHttpMessageConverter;
@@ -41,8 +50,10 @@ import org.springframework.http.converter.json.MappingJackson2HttpMessageConvert
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.HttpMediaTypeNotSupportedException;
+import org.springframework.web.servlet.handler.PathPatternsTestUtils;
 import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 import org.springframework.web.testfixture.servlet.MockHttpSession;
+import org.springframework.web.testfixture.servlet.MockPart;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -53,40 +64,37 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  * @author Arjen Poutsma
  * @since 5.1
  */
-public class DefaultServerRequestTests {
+class DefaultServerRequestTests {
 
-	private final List<HttpMessageConverter<?>> messageConverters = Collections.singletonList(
-			new StringHttpMessageConverter());
+	private final List<HttpMessageConverter<?>> messageConverters = List.of(new StringHttpMessageConverter());
+
 
 	@Test
-	public void method() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("HEAD", "/");
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+	void method() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("HEAD", "/", true);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.method()).isEqualTo(HttpMethod.HEAD);
 	}
 
 	@Test
-	public void uri() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void uri() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setServerName("example.com");
 		servletRequest.setScheme("https");
 		servletRequest.setServerPort(443);
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.uri()).isEqualTo(URI.create("https://example.com/"));
 	}
 
 	@Test
-	public void uriBuilder() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/path");
+	void uriBuilder() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/path", true);
 		servletRequest.setQueryString("a=1");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		URI result = request.uriBuilder().build();
 		assertThat(result.getScheme()).isEqualTo("http");
@@ -97,94 +105,100 @@ public class DefaultServerRequestTests {
 	}
 
 	@Test
-	public void attribute() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void attribute() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setAttribute("foo", "bar");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.attribute("foo")).isEqualTo(Optional.of("bar"));
 	}
 
 	@Test
-	public void params() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void params() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "bar");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.param("foo")).isEqualTo(Optional.of("bar"));
 	}
 
 	@Test
-	public void emptyQueryParam() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void multipartData() throws Exception {
+		MockPart formPart = new MockPart("form", "foo".getBytes(UTF_8));
+		MockPart filePart = new MockPart("file", "foo.txt", "foo".getBytes(UTF_8));
+
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("POST", "/", true);
+		servletRequest.addPart(formPart);
+		servletRequest.addPart(filePart);
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		MultiValueMap<String, Part> result = request.multipartData();
+
+		assertThat(result).hasSize(2);
+		assertThat(result.get("form")).containsExactly(formPart);
+		assertThat(result.get("file")).containsExactly(filePart);
+	}
+
+	@Test
+	void emptyQueryParam() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.param("foo")).isEqualTo(Optional.of(""));
 	}
 
 	@Test
-	public void absentQueryParam() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void absentQueryParam() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setParameter("foo", "");
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.param("bar")).isEqualTo(Optional.empty());
 	}
 
 	@Test
-	public void pathVariable() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void pathVariable() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.pathVariable("foo")).isEqualTo("bar");
 	}
 
 	@Test
-	public void pathVariableNotFound() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void pathVariableNotFound() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				request.pathVariable("baz"));
+		assertThatIllegalArgumentException().isThrownBy(() -> request.pathVariable("baz"));
 	}
 
 	@Test
-	public void pathVariables() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void pathVariables() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		Map<String, String> pathVariables = Collections.singletonMap("foo", "bar");
-		servletRequest
-				.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
+		servletRequest.setAttribute(RouterFunctions.URI_TEMPLATE_VARIABLES_ATTRIBUTE, pathVariables);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.pathVariables()).isEqualTo(pathVariables);
 	}
 
 	@Test
-	public void header() {
+	void header() {
 		HttpHeaders httpHeaders = new HttpHeaders();
-		List<MediaType> accept =
-				Collections.singletonList(MediaType.APPLICATION_JSON);
+		List<MediaType> accept = Collections.singletonList(MediaType.APPLICATION_JSON);
 		httpHeaders.setAccept(accept);
 		List<Charset> acceptCharset = Collections.singletonList(UTF_8);
 		httpHeaders.setAcceptCharset(acceptCharset);
@@ -197,30 +211,30 @@ public class DefaultServerRequestTests {
 		List<HttpRange> range = Collections.singletonList(HttpRange.createByteRange(0, 42));
 		httpHeaders.setRange(range);
 
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		httpHeaders.forEach(servletRequest::addHeader);
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		ServerRequest.Headers headers = request.headers();
 		assertThat(headers.accept()).isEqualTo(accept);
 		assertThat(headers.acceptCharset()).isEqualTo(acceptCharset);
 		assertThat(headers.contentLength()).isEqualTo(OptionalLong.of(contentLength));
 		assertThat(headers.contentType()).isEqualTo(Optional.of(contentType));
+		assertThat(headers.header(HttpHeaders.CONTENT_TYPE)).containsExactly(MediaType.TEXT_PLAIN_VALUE);
+		assertThat(headers.firstHeader(HttpHeaders.CONTENT_TYPE)).isEqualTo(MediaType.TEXT_PLAIN_VALUE);
 		assertThat(headers.asHttpHeaders()).isEqualTo(httpHeaders);
 	}
 
 	@Test
-	public void cookies() {
+	void cookies() {
 		Cookie cookie = new Cookie("foo", "bar");
 
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setCookies(cookie);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		MultiValueMap<String, Cookie> expected = new LinkedMultiValueMap<>();
 		expected.add("foo", cookie);
@@ -230,75 +244,247 @@ public class DefaultServerRequestTests {
 	}
 
 	@Test
-	public void bodyClass() throws Exception {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void bodyClass() throws Exception {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 		servletRequest.setContent("foo".getBytes(UTF_8));
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		String result = request.body(String.class);
 		assertThat(result).isEqualTo("foo");
 	}
 
 	@Test
-	public void bodyParameterizedTypeReference() throws Exception {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void bodyParameterizedTypeReference() throws Exception {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setContentType(MediaType.APPLICATION_JSON_VALUE);
 		servletRequest.setContent("[\"foo\",\"bar\"]".getBytes(UTF_8));
 
 		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				Collections.singletonList(new MappingJackson2HttpMessageConverter()));
+				List.of(new MappingJackson2HttpMessageConverter()));
 
 		List<String> result = request.body(new ParameterizedTypeReference<List<String>>() {});
-		assertThat(result.size()).isEqualTo(2);
+		assertThat(result).hasSize(2);
 		assertThat(result.get(0)).isEqualTo("foo");
 		assertThat(result.get(1)).isEqualTo("bar");
 	}
 
 	@Test
-	public void bodyUnacceptable() throws Exception {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void bodyUnacceptable() throws Exception {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		servletRequest.setContentType(MediaType.TEXT_PLAIN_VALUE);
 		servletRequest.setContent("foo".getBytes(UTF_8));
 
-		DefaultServerRequest request =
-				new DefaultServerRequest(servletRequest, Collections.emptyList());
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, Collections.emptyList());
 
-		assertThatExceptionOfType(HttpMediaTypeNotSupportedException.class).isThrownBy(() ->
-				request.body(String.class));
+		assertThatExceptionOfType(HttpMediaTypeNotSupportedException.class)
+				.isThrownBy(() -> request.body(String.class));
 	}
 
 	@Test
-	public void session() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
+	void session() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
 		MockHttpSession session = new MockHttpSession();
 		servletRequest.setSession(session);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.session()).isEqualTo(session);
-
 	}
 
 	@Test
-	public void principal() {
-		MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
-		Principal principal = new Principal() {
-			@Override
-			public String getName() {
-				return "foo";
-			}
-		};
+	void principal() {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest("GET", "/", true);
+		Principal principal = () -> "foo";
 		servletRequest.setUserPrincipal(principal);
 
-		DefaultServerRequest request = new DefaultServerRequest(servletRequest,
-				this.messageConverters);
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
 
 		assertThat(request.principal().get()).isEqualTo(principal);
+	}
 
+	@ParameterizedHttpMethodTest
+	void checkNotModifiedTimestamp(String method) throws Exception {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		Instant now = Instant.now().truncatedTo(ChronoUnit.SECONDS);
+		servletRequest.addHeader(HttpHeaders.IF_MODIFIED_SINCE, now.toEpochMilli());
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(now, "");
+
+		assertThat(result).hasValueSatisfying(serverResponse -> {
+			assertThat(serverResponse.statusCode()).isEqualTo(HttpStatus.NOT_MODIFIED);
+			assertThat(serverResponse.headers().getLastModified()).isEqualTo(now.toEpochMilli());
+		});
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkModifiedTimestamp(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		Instant now = Instant.now().truncatedTo(ChronoUnit.SECONDS);
+		Instant oneMinuteAgo = now.minus(1, ChronoUnit.MINUTES);
+		servletRequest.addHeader(HttpHeaders.IF_MODIFIED_SINCE, oneMinuteAgo.toEpochMilli());
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(now, "");
+
+		assertThat(result).isEmpty();
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkNotModifiedETag(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String eTag = "\"Foo\"";
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, eTag);
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(eTag);
+
+		assertThat(result).hasValueSatisfying(serverResponse -> {
+			assertThat(serverResponse.statusCode()).isEqualTo(HttpStatus.NOT_MODIFIED);
+			assertThat(serverResponse.headers().getETag()).isEqualTo(eTag);
+		});
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkNotModifiedETagWithSeparatorChars(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String eTag = "\"Foo, Bar\"";
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, eTag);
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(eTag);
+
+		assertThat(result).hasValueSatisfying(serverResponse -> {
+			assertThat(serverResponse.statusCode()).isEqualTo(HttpStatus.NOT_MODIFIED);
+			assertThat(serverResponse.headers().getETag()).isEqualTo(eTag);
+		});
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkModifiedETag(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String currentETag = "\"Foo\"";
+		String oldEtag = "Bar";
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, oldEtag);
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(currentETag);
+
+		assertThat(result).isEmpty();
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkNotModifiedUnpaddedETag(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String eTag = "Foo";
+		String paddedEtag = String.format("\"%s\"", eTag);
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, paddedEtag);
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(eTag);
+
+		assertThat(result).hasValueSatisfying(serverResponse -> {
+			assertThat(serverResponse.statusCode()).isEqualTo(HttpStatus.NOT_MODIFIED);
+			assertThat(serverResponse.headers().getETag()).isEqualTo(paddedEtag);
+		});
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkModifiedUnpaddedETag(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String currentETag = "Foo";
+		String oldEtag = "Bar";
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, oldEtag);
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(currentETag);
+
+		assertThat(result).isEmpty();
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkNotModifiedWildcardIsIgnored(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String eTag = "\"Foo\"";
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, "*");
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(eTag);
+
+		assertThat(result).isEmpty();
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkNotModifiedETagAndTimestamp(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String eTag = "\"Foo\"";
+		Instant now = Instant.now().truncatedTo(ChronoUnit.SECONDS);
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, eTag);
+		servletRequest.addHeader(HttpHeaders.IF_MODIFIED_SINCE, now.toEpochMilli());
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(now, eTag);
+
+		assertThat(result).hasValueSatisfying(serverResponse -> {
+			assertThat(serverResponse.statusCode()).isEqualTo(HttpStatus.NOT_MODIFIED);
+			assertThat(serverResponse.headers().getETag()).isEqualTo(eTag);
+			assertThat(serverResponse.headers().getLastModified()).isEqualTo(now.toEpochMilli());
+		});
+
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkNotModifiedETagAndModifiedTimestamp(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String eTag = "\"Foo\"";
+		Instant now = Instant.now().truncatedTo(ChronoUnit.SECONDS);
+		Instant oneMinuteAgo = now.minus(1, ChronoUnit.MINUTES);
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, eTag);
+		servletRequest.addHeader(HttpHeaders.IF_MODIFIED_SINCE, oneMinuteAgo.toEpochMilli());
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(now, eTag);
+
+		assertThat(result).hasValueSatisfying(serverResponse -> {
+			assertThat(serverResponse.statusCode()).isEqualTo(HttpStatus.NOT_MODIFIED);
+			assertThat(serverResponse.headers().getETag()).isEqualTo(eTag);
+			assertThat(serverResponse.headers().getLastModified()).isEqualTo(now.toEpochMilli());
+		});
+	}
+
+	@ParameterizedHttpMethodTest
+	void checkModifiedETagAndNotModifiedTimestamp(String method) {
+		MockHttpServletRequest servletRequest = PathPatternsTestUtils.initRequest(method, "/", true);
+		String currentETag = "\"Foo\"";
+		String oldEtag = "\"Bar\"";
+		Instant now = Instant.now().truncatedTo(ChronoUnit.SECONDS);
+		servletRequest.addHeader(HttpHeaders.IF_NONE_MATCH, oldEtag);
+		servletRequest.addHeader(HttpHeaders.IF_MODIFIED_SINCE, now.toEpochMilli());
+
+		DefaultServerRequest request = new DefaultServerRequest(servletRequest, this.messageConverters);
+
+		Optional<ServerResponse> result = request.checkNotModified(now, currentETag);
+
+		assertThat(result).isEmpty();
+	}
+
+
+	@Retention(RetentionPolicy.RUNTIME)
+	@Target(ElementType.METHOD)
+	@ParameterizedTest(name = "[{index}] {0}")
+	@ValueSource(strings = { "GET", "HEAD" })
+	@interface ParameterizedHttpMethodTest {
 	}
 
 }
